# OpenComputePrices

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  backfill_skypilot.py  collect.py  collector_registry.py  create_initial_release.sh  dashboard_asset.py  latest_offers.py  moresources.md  pyproject.toml  rebuild_archive.py  release_data.py  requirements.txt  row_utils.py  schema.py  storage.py  summary.py  unify.py  validation.py
.github/: CODEOWNERS  dependabot.yml
collectors/: akash.py  aws.py  azure.py  base.py  browser_providers.py  browser_scraper.py  cloreai.py  coreweave.py  crusoe.py  cudo.py  datacrunch.py  deepinfra.py  denvr.py  e2e.py  gcp.py  getdeploying.py  hyperstack.py  infracost.py  jarvislabs.py  lambda_cloud.py  latitude.py  linode.py  massedcompute.py  novita.py  openrouter.py  oracle.py  paperspace.py  primeintellect.py  runpod.py  salad.py  shadeform.py  skypilot.py  tensordock.py  thundercompute.py  together.py  vastai.py  voltagepark.py  vultr.py
data/: _inference.csv  aethir.csv  akash.csv  azure.csv  coreweave.csv  crusoe.csv  cudo.csv  deepinfra.csv  denvr.csv  e2e.csv  getdeploying.csv  gmicloud.csv  jarvislabs.csv  latitude.csv  lightningai.csv  linode.csv  massedcompute.csv  novita.csv  openrouter.csv  oracle.csv  paperspace.csv  skypilot.csv  tensordock.csv  thundercompute.csv  together.csv  voltagepark.csv  vultr.csv
tests/: test_akash.py  test_api_collectors.py  test_aws.py  test_azure.py  test_base.py  test_browser_collectors.py  test_collect.py  test_dashboard_asset.py  test_gcp.py  test_getdeploying.py  test_latest_offers.py  (+5 more)
(+4 files in other folders)
