[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opencomputeprices"
version = "0.1.0"
description = "Historical GPU and inference cloud pricing collectors and dataset tooling."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Kavish"}
]
keywords = ["gpu", "pricing", "cloud", "dataset", "scraping"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Database",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = []

[tool.setuptools]
py-modules = [
  "collect",
  "dashboard_asset",
  "release_data",
  "schema",
  "summary",
  "unify",
]

[tool.setuptools.packages.find]
include = ["collectors"]
